--- a/meta-nvidia/meta-prime/meta-gb200nvl/meta-bmc/recipes-kernel/linux/linux-aspeed/gb200nvl-bmc.cfg
+++ b/meta-nvidia/meta-prime/meta-gb200nvl/meta-bmc/recipes-kernel/linux/linux-aspeed/gb200nvl-bmc.cfg
@@ -56,3 +56,4 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CP210X=y
 CONFIG_USB_SERIAL_GENERIC=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
+CONFIG_SENSORS_MAX31790=y
