--- a/meta-nvidia/meta-prime/recipes-phosphor/dump/dump.fs_dep.conf
+++ b/meta-nvidia/meta-prime/recipes-phosphor/dump/dump.fs_dep.conf
@@ -1,6 +1,5 @@
 [Unit]
-After=var-lib-logging.mount local-fs.target
-Requires=var-lib-logging.mount
+After=local-fs.target
 
 [Service]
 ExecStartPre=/bin/sh -c "check_logmount.sh"
