Updates to GB200NVL meta layer and related recipes
Signed-off-by: Chinmay Shripad Hegde <chinmays@nvidia.com>

--- a/meta-nvidia/meta-prime/meta-graceblackwell/meta-gb200nvl/meta-bmc/recipes-kernel/linux/linux-aspeed/gb200nvl-bmc.cfg
+++ b/meta-nvidia/meta-prime/meta-graceblackwell/meta-gb200nvl/meta-bmc/recipes-kernel/linux/linux-aspeed/gb200nvl-bmc.cfg
@@ -70,3 +70,5 @@ CONFIG_SENSORS_ISL68137=y
 CONFIG_SENSORS_LM25066=y
 CONFIG_LM25066_CURR_LIMIT_HIGH=y
 CONFIG_SENSORS_LTC4286=y
+CONFIG_USB_HIDDEV=y
+CONFIG_HIDRAW=y
