Make updates to meta-nvidia GB200NVL
Signed-off-by: Deepak Kodihalli <deepak.kodihalli.83@gmail.com>

--- a/meta-nvidia/meta-prime/meta-graceblackwell/meta-gb200nvl/meta-hmc/recipes-nvidia/nsmd/files/nsmd.service
+++ b/meta-nvidia/meta-prime/meta-graceblackwell/meta-gb200nvl/meta-hmc/recipes-nvidia/nsmd/files/nsmd.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=MCTP Nvidia System Management Daemon
-After=mctp-pcie-ctrl.service
+After=mctp-usb-ctrl.service
 After=xyz.openbmc_project.EntityManager.service
 After=xyz.openbmc_project.FruDevice.service
 
