--- a/meta-nvidia/meta-prime/meta-graceblackwell/recipes-bsp/u-boot/files/fw_env.config
+++ b/meta-nvidia/meta-prime/meta-graceblackwell/recipes-bsp/u-boot/files/fw_env.config
@@ -1,2 +1,2 @@
 # MTD device name       Device offset   Env. size       Flash sector size       Number of sectors
-/dev/mtd5     0x0000          0x40000         0x1000
+/dev/mtd/by-name/u-boot-env     0x0000          0x40000         0x1000
