--- a/meta-nvidia/recipes-nvidia/nvidia-fdr/files/nvidia-fdr.service
+++ b/meta-nvidia/recipes-nvidia/nvidia-fdr/files/nvidia-fdr.service
@@ -5,6 +5,8 @@ After=network.target
 
 [Service]
 Environment=PLATFORMS_PATH=/tmp/nvidia-fdr/platforms
+LogRateLimitIntervalSec=86400s
+LogRateLimitBurst=500
 
 TimeoutStartSec=360
 ExecStartPre=/usr/bin/fdr_platforms.sh
